# knowledgeproj

./: .gitignore  README.md  pyproject.toml
artifacts/: kg_core_turing.json  linker.joblib  linker_turing.joblib  ner_ablation.json  ner_crf.joblib  ner_crf_turing.joblib  ner_errors.jsonl  nodes_turing.csv  pipeline_output_turing_dynamic.json  re_clf.joblib  re_clf_turing.joblib  triples_turing.csv
data/sample/: input.txt  kb.jsonl  ner_dev.jsonl  ner_train.jsonl  re_dev.jsonl  re_train.jsonl  relation_ontology.json
outputs/reference_style_chain/entity_disambiguation/: input.csv  input_mentions.csv
outputs/reference_style_chain/entity_extraction/: input.csv  input_lexicon.jsonl
outputs/reference_style_chain/knowledge_graph/: input_core.json  input_nodes.csv  input_pipeline.json  input_relation_lexicon.json  input_submission_core.csv  input_submission_core.json  input_triples.csv
reports/: final_turing_kg_report.md  report_template.md  submission_core_kg.md
scripts/: analyze_ner_errors.py  augment_turing_kb.py  build_turing_domain_data.py  download_bert_model.py  kg.py  run_ner_ablation.py  run_pipeline.py  train_linker.py  train_ner_bert.py  train_ner_crf.py  train_re.py  visualize_results.py
src/kg_pipeline/: __init__.py
src/kg_pipeline/data/: __init__.py  io.py  schemas.py
src/kg_pipeline/el/: __init__.py  linker.py
src/kg_pipeline/ner/: __init__.py  bert_crf.py  crf_baseline.py
src/kg_pipeline/pipeline/: __init__.py  full_chain.py
src/kg_pipeline/utils/: __init__.py  (+1 more)
src/knowledgeproj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2 files in other folders)
