[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeproj"
version = "0.1.0"
description = "Knowledge engineering pipeline: NER, entity linking, relation extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "sklearn-crfsuite>=0.3.6",
  "joblib>=1.3",
  "torch>=2.2",
  "transformers>=4.39",
  "torchcrf>=1.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
