[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeproj"
version = "0.1.0"
description = "Knowledge engineering pipeline: NER, entity linking, relation extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "sklearn-crfsuite>=0.3.6",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "torch>=2.2",
  "transformers>=4.39",
  "pytorch-crf>=0.7.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
